[package]
name = "ftl_labelling"
version = "0.4.0"
edition = "2021"
authors = ["Najib Ishaq <najib_ishaq@zoho.com>", "Nicholas Schaub <nick.schaub@nih.gov>"]
rust-version = "1.60.0"
readme = "README.md"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ftl_labelling"
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "1.5"
numpy = "0.16"

[dependencies.pyo3]
version = "0.16"
features = ["extension-module"]

[dependencies.ndarray]
version = "0.15"
features = ["rayon"]

[dev-dependencies]
ndarray-npy = "0.8"
memmap2 = "0.5"

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]
